--- a/style.css
+++ b/style.css
@@ -1,3 +1,155 @@
+/* Import Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+/* Use it */
 body {
-    background: rgb(89, 255, 0);
+  font-family: "Roboto", sans-serif;
+  
+/*   background: lightblue; */
+  /*   background: gray; */
+/*   background: linear-gradient(180deg, #766A6A 31.97%, rgba(217, 217, 217, 0.00) 100%); */
+  
+/*   background: url(https://assets.codepen.io/16425/bgpattern.webp) no-repeat center center; */
+  
+  background: url(https://assets.codepen.io/16425/bgpattern.webp)
+}
+
+/* first frame */
+article h1{
+  opacity: 0; 
+  
+  font-weight: 900;
+  font-size: 2rem;
+  
+  animation:fadeIn;
+  animation-duration: 1s;
+  animation-delay: 2s;
+  animation-fill-mode: both;
+}
+
+/* last frame */
+/* article h1 {
+  font-weight: 900;
+  font-size: 2rem;
+  
+  color: darkgreen;
+
+} */
+
+article p, aside p {
+  font-weight: 200;
+    font-size: 1.25rem;
+}
+
+article img {
+  filter: blur(4px);
+  border-radius: 2em;
+  
+  transition: filter .5s;
+  
+/*  hide image  */
+  opacity: 0; 
+  
+  animation:fadeIn;
+  animation-duration: 1s;
+  animation-delay: 1s;
+  animation-fill-mode: both;
+}
+
+article img:hover{
+  filter: blur(0);
+}
+
+/* nav link states */
+
+nav {
+  display: flex;
+  gap: 1rem;
+}
+a{
+  display: inline-block;
+}
+
+/* first Frame */
+a:link,
+a:visited{
+  background: gray;
+  border-radius: 4px;
+  min-width: 5rem;
+  margin: .5em;
+  padding: .25rem;
+  color: white;
+  
+  text-align: center;
+}
+
+
+/* Last Frame */
+a:hover,
+a:active{
+  background: white;
+  border: 1px solid black;
+  color: gray;
+  
+  transform: scale(1.5);
+  
+  transition: background .5s,
+    transform .5s;
+}
+
+
+/* layouts */
+main {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+/* primary */
+main article {
+  text-align: center;
+}
+
+/* secondary */
+main aside {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+}
+
+/* Keyframe animation */
+
+@keyframes fadeIn{
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* Media Queries */
+@media screen and ( max-width: 700px ) {
+  
+  main { 
+     grid-template-columns: repeat(1, 1fr);
+     justify-content: center;
+  }
+   
+  main h1 {
+    text-align: center;
+    font-size: 1.5rem;
+  }
+  
+  main img{
+    display: block;
+    
+    max-height: 50%;
+    width: 100%;
+  }
+  
+  aside nav {
+    display: flex;
+    flex-direction: column;
+  }
 }
